--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -27,6 +27,10 @@
 
         Should this be underlined? Yes No\n\n
 
+        This link has some prepended text.\n\n
+
+        While this link has some appended text.\n\n
+
         Hope you enjoyed the demo :)\n\n
 
         Check out our real apps on the Play Store!
