--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -33,6 +33,6 @@
 
         Hope you enjoyed the demo :)\n\n
 
-        Check out our real apps on the Play Store!
+        Check out our real apps on the Play Store
     </string>
 </resources>
