let set links bold

--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -27,6 +27,8 @@
 
         Should this be underlined? Yes No\n\n
 
+        This word is bold\n\n
+
         This link has some prepended text.\n\n
 
         While this link has some appended text.\n\n
